[sachin- image upload api is created]

--- a/FunDoNotApplication/appsettings.json
+++ b/FunDoNotApplication/appsettings.json
@@ -13,5 +13,10 @@
     "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
     "expirationInMinutes": 1440
   },
+  "CloudinarySettings": {
+    "CloudName": "dw1ehhnwh",
+    "ApiKey": "159527729523467",
+    "ApiSecret": "rPvY31IOocotY_9R8FuFLwJ6o0c"
+  },
   "AllowedHosts": "*"
 }
