--- a/CommonLayer/CommonLayer.csproj
+++ b/CommonLayer/CommonLayer.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Experimental.System.Messaging" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
